WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240940
Incorrect layout on iframe with object-fit
https://bugs.webkit.org/show_bug.cgi?id=240940
Summary
Incorrect layout on iframe with object-fit
Simon Fraser (smfr)
Reported
2022-05-25 20:25:32 PDT
object-fit can break iframe layout sometimes.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-05-25 22:00:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1042
EWS
Comment 2
2022-05-26 09:57:02 PDT
Committed
r294880
(
251010@main
): <
https://commits.webkit.org/251010@main
> Reviewed commits have been landed. Closing PR #1042 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-26 09:58:13 PDT
<
rdar://problem/93977460
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug