Incorrect layout on iframe with object-fit https://bugs.webkit.org/show_bug.cgi?id=240940 <rdar://93188925>

Reviewed by Alan Bujtas.

Don't use replacedContentRect() when positioning iframe content layers, because iframes
don't (yet) respond to object-fit.

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::contentsBox const):

Canonical link: https://commits.webkit.org/251010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294880 268f45cc-cd09-0410-ab3c-d52691b4dbfc